Revision history for Perl extension Asterisk::AMI.
=======
0.3
        - Support for old Callback and Timeout syntax has been removed.

        - Removed method queue_member_toggle

        - Changed queue_member_pause to no longer accept a pause value and instead just pauses the member.

        - Added method queue_member_unpause to unpause a queue member.

        - Removed Asterisk::AMI::Common::Dev. New methods will just be added to Asterisk::AMI::Common and a note
        added about compatibility.

        - Abstracted some of the logic in Asterisk::AMI::Common to a seperate module so that it may be shared with
        Asterisk::AMI::Async.

        - Default Authentication method changed to MD5 instead of plaintext.

        - The 'OriginateHack' is now on by default which also meas call events are enabled by default

        NOT DONE

        - Added Asterisk::AMI::Async. Similiar to Asterisk::AMI::Common but can be used in an event based application.

        - (Auto failback?) for MD5 auth?

        - Look at the broken pipe issue

        - Asterisk::AMI::Async additional options - AutoDiscard? Default CB? Builtins? WarnOnBad? DieOnBad?

        - Asterisk::AMI::Async additional options - AutoDiscard? Default CB? Builtins? WarnOnBad? DieOnBad? - Done in Asterisk::AMI

        - Huge Doc changes, breakout config options into groups. Make less 'Scary'

0.2.5
        - Fix RT#65782 Consume all memory on dropped connection.
0.2.4
        - Due to a bug introduced in 0.2.3 get_event would return a reference to the current Asterisk::AMI object instead of the event. 

0.2.3
        - The Carp module is now required.

        - Switched certain warnings to now use carp where appropriate.

        - We now honor the 'use warnings' pragma and only present warnings when it is enabled. To disable all warnings
        specific to this module you can use 'no warnings qw(Asterisk::AMI)'.
